secondfile/objects/Directory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Directory Entries</relationshipLabel>
        <relationshipName>Directory_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Feedback__c</fullName>
        <label>Additional Information Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score__c</fullName>
        <label>Aggregate Score</label>
        <summarizedField>Provider_Request__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Provider_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </summaryFilterItems>
        <summaryForeignKey>Provider_Request__c.Directory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Timestamp__c</fullName>
        <label>Approval Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Directory_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BufferToStoreMultiPickVal__c</fullName>
        <label>Search-Friendly Multi-Pick Val</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Display_Name__c</fullName>
        <label>Company Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connect_Tab_Feedback__c</fullName>
        <label>Contact Tab Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Video__c</fullName>
        <label>Demo Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description_Authenticated__c</fullName>
        <label>Description - Authenticated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_Tab_Feedback__c</fullName>
        <label>Details Tab Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directory_Check_for_Archived_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Check for Archived Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directory_Detail_Page__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Published&quot;), HYPERLINK( 

&quot;apex/SI_ProviderDetailsPage?id=&quot;&amp;Id&amp;&quot;&amp;bidID=&amp;Flag=O&quot;, &quot;View&quot;), &quot;&quot; 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Directory Detail Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_On_Landing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display On Landing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_History_Additional_Information__c</fullName>
        <label>Feedback History-Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_History_Contact__c</fullName>
        <label>Feedback History - Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_History_Details__c</fullName>
        <label>Feedback History - Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_History_Overview__c</fullName>
        <label>Feedback History - Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_History_Provider_Details__c</fullName>
        <label>Feedback History - Provider Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Size_Logo_Image__c</fullName>
        <formula>IF (ISBLANK(  Full_Size_Logo__c) , &quot;&quot;, IMAGE(  Full_Size_Logo__c  , &quot;Full Size Logo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full-Size Logo Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Size_Logo__c</fullName>
        <label>Full-Size Logo Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Image_Link__c , &quot;Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <label>Industries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Builders</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Fortune 100</fullName>
                </value>
                <value>
                    <fullName>Government Federal</fullName>
                </value>
                <value>
                    <fullName>Government Local</fullName>
                </value>
                <value>
                    <fullName>Government State</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>International business</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Professional services</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewer_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Reviewer Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Directory_Entries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo_Link__c</fullName>
        <label>Logo Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE( Logo_Link__c , &quot;Logo Picture&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Consultant_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Directory Reviewer Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Directory Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Directory_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Flagged_Reviews__c</fullName>
        <label># of Flagged Reviews</label>
        <summarizedField>Provider_Request__c.Flag_Count__c</summarizedField>
        <summaryForeignKey>Provider_Request__c.Directory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label># of Reviews</label>
        <summaryFilterItems>
            <field>Provider_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </summaryFilterItems>
        <summaryForeignKey>Provider_Request__c.Directory__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overview_Tab_Feedback__c</fullName>
        <label>Overview Tab Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Secondary__c</fullName>
        <label>Secondary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Email_Address__c</fullName>
        <label>Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Details_Feedback__c</fullName>
        <label>Provider Details Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF (Number_of_Reviews__c=0,null , Aggregate_Score__c / Number_of_Reviews__c )</formula>
        <label>Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National (U.S.)</fullName>
                </value>
                <value>
                    <fullName>West (U.S.)</fullName>
                </value>
                <value>
                    <fullName>South (U.S.)</fullName>
                </value>
                <value>
                    <fullName>Midwest (U.S.)</fullName>
                </value>
                <value>
                    <fullName>Northeast (U.S.)</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>India/Southern Asia</fullName>
                </value>
                <value>
                    <fullName>Eastern Asia</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; Central Asia</fullName>
                </value>
                <value>
                    <fullName>Central &amp; South America</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia/Oceania</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_More_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request More Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrict_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_History__c</fullName>
        <label>Review History</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Email_Address__c</fullName>
        <label>Secondary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Solutions_Other__c</fullName>
        <label>Solutions - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <label>Solutions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network Services</fullName>
                </value>
                <value>
                    <fullName>Mobile Services</fullName>
                </value>
                <value>
                    <fullName>Cloud &amp; Hosting</fullName>
                </value>
                <value>
                    <fullName>Application Services</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>IT Support</fullName>
                </value>
                <value>
                    <fullName>Conference Call Services</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Software Solutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standardized_YouTube_URL__c</fullName>
        <formula>IF ( CONTAINS( Demo_Video__c, &quot;youtu.be&quot;),

&quot;http://www.youtube.com/watch?v=&quot;&amp;RIGHT(Demo_Video__c,(LEN(Demo_Video__c)-(FIND(&quot;.be&quot;,Demo_Video__c)+3))), 
IF(CONTAINS(Demo_Video__c, &quot;&amp;&quot;),
LEFT(Demo_Video__c,LEN(Demo_Video__c)-(LEN(Demo_Video__c)-FIND(&quot;&amp;&quot;,Demo_Video__c))-1),

Demo_Video__c

    ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standardized YouTube URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Legal Approval</fullName>
                </value>
                <value>
                    <fullName>Review Requested</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_Authenticated__c</fullName>
        <label>Summary - Authenticated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tagline__c</fullName>
        <label>Tagline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>Account__r.SP_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Directory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Company_Display_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Request_ID__c</columns>
        <columns>Marketing_Consultant__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Enablement_Resources</fullName>
        <columns>NAME</columns>
        <columns>Company_Display_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Number_of_Reviews__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Directory__c.Enablement_Resource</value>
        </filters>
        <label>Enablement Resources</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Company_Display_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Request_ID__c</columns>
        <columns>Marketing_Consultant__c</columns>
        <columns>Legal_Reviewer__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval,Pending Legal Approval</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Published_Entries</fullName>
        <columns>NAME</columns>
        <columns>Company_Display_Name__c</columns>
        <columns>Approver__c</columns>
        <columns>Approval_Timestamp__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>Published Entries</label>
    </listViews>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Directory Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Directory Entries</pluralLabel>
    <recordTypes>
        <fullName>Enablement_Resource</fullName>
        <active>true</active>
        <label>Enablement Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>InApproval</fullName>
        <active>true</active>
        <description>Record Type Which is in Approval Process</description>
        <label>InApproval</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewOrApproved</fullName>
        <active>true</active>
        <description>Record Type Which is in New State</description>
        <label>Solution Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_user_type</fullName>
        <active>true</active>
        <description>This validation rule is used check which all EBM users will be able to edit fields on directory record</description>
        <errorConditionFormula>AND( 
NOT(ISNEW()),
NOT($User.Directory_Manager__c ),
$User.Username &lt;&gt; Legal_Reviewer__r.Username,
$User.Username &lt;&gt;  Marketing_Consultant__r.Username,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;SI_API User&quot;,
RecordType.DeveloperName  &lt;&gt; &quot;Enablement_Resource&quot;
)</errorConditionFormula>
        <errorMessage>You are not authorized to modify Directory record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_Authenticated_field_length</fullName>
        <active>true</active>
        <description>The Length of the Description – Authenticated field should not be more than 100.</description>
        <errorConditionFormula>(LEN( Description_Authenticated__c )  &gt; 100)</errorConditionFormula>
        <errorMessage>Length of the Description – Authenticated field should not be more than 100 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_statuses_available_to_EBM_Users</fullName>
        <active>true</active>
        <description>EBMs can only set Pending Legal Approval, Review Requested, Published</description>
        <errorConditionFormula>AND(
ISCHANGED(Status__c),
 NOT(Directory_Check_for_Archived_Status__c),
OR(ISPICKVAL(Status__c ,&quot;Pending Approval&quot;),
ISPICKVAL(Status__c ,&quot;Archived&quot;),
ISPICKVAL(Status__c ,&quot;Draft&quot;),
ISPICKVAL(Status__c , &quot;Deleted&quot;)),
$Profile.Name &lt;&gt; &quot;SI_API User&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
RecordType.DeveloperName &lt;&gt; &quot;Enablement_Resource&quot; 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>This status may only be selected by the SP in the PE Portal. Please set a valid status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_set_to_published</fullName>
        <active>true</active>
        <description>If the Status is Published the following fields Company Display Name,Tagline,Summary,Description,Solutions,City,State,Country,Website,Primary Email,Primary Phone Number,Logo Link,Full Size Logo Link,
Demonstration cannot be null:</description>
        <errorConditionFormula>AND
(
RecordType.Name   =   &apos;Enablement Resource&apos;,
ISPICKVAL( Status__c ,&quot;Published&quot;),
OR(
ISBLANK( Company_Display_Name__c), 
ISBLANK(Summary__c) ,
ISBLANK( Tagline__c ),
ISBLANK(  City__c  ),
ISBLANK(  State__c  ),
ISBLANK(  Country__c  ),
ISBLANK(  Website__c  ),
ISBLANK(  Primary_Email_Address__c  ),
ISBLANK(  Phone_Number__c  ),
ISBLANK(  Logo_Link__c  ),
ISBLANK(  Full_Size_Logo__c  ),
OR(ISBLANK( Demo_Video__c &amp; Image_Link__c ))
)
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>If the Status is Published the following fields Company Display Name,Tagline,Summary,Description,Solutions,City,State,Country,Website,Primary Email,Primary Phone Number,Logo Link,Full Size Logo Link,
Demonstration cannot be null:</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Summary_Authenticated_field_length</fullName>
        <active>true</active>
        <description>The Length of the Summary-Authenticated field should not be more than 50 characters</description>
        <errorConditionFormula>(LEN( Summary_Authenticated__c ) &gt; 50)</errorConditionFormula>
        <errorMessage>The Length of the Summary – Authenticated field should not be more than 50 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Summary_Field_Length</fullName>
        <active>true</active>
        <description>The Length of the summary field should not be greater than 250 characters.</description>
        <errorConditionFormula>(LEN( Summary__c )   &gt;   250)</errorConditionFormula>
        <errorMessage>Length of the Summary field should not be more than 250 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_On_Feedback_Fields</fullName>
        <active>true</active>
        <description>Validation on feedback fields on Status &quot;Review Requested &quot;.</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Status__c ,&quot;Review Requested&quot;),
ISBLANK(Provider_Details_Feedback__c),
 ISBLANK( Overview_Tab_Feedback__c ),
  ISBLANK( Details_Tab_Feedback__c ),
  ISBLANK( Connect_Tab_Feedback__c ),
  ISBLANK( Additional_Information_Feedback__c)
)</errorConditionFormula>
        <errorMessage>Feedback should be provided if Status is set to &quot;Review Requested&quot;.</errorMessage>
    </validationRules>
</CustomObject>